# mygls-python

./: Pipfile  README.md  setup.cfg  setup.py
gls/: __init__.py  address.py  gls.py  gls_types.py  parcel.py  response.py  service.py  settings.py
tests/: test_gls.py
