[metadata]
name = mygls-rest-client
version = attr: gls.__version__.__version__
author = Adam Kornafeld
author_email = adam@kornafeld.com
url = https://github.com/adamkornafeld/mygls-python
description = MyGLS REST API client
long_description = file: README.md
long_description_content_type = text/markdown
keywords = gls, mygls, api, rest, package, parcel, label, print
license = Apache Software License 2.0 (Apache-2.0)
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License 2.0 (Apache-2.0)
    Operating System :: OS Independent
project_urls = 
    Documentation = https://github.com/adamkornafeld/mygls-python/blob/main/README.md
    Source = https://github.com/adamkornafeld/mygls-python

[options]
python_requires = >=3.8
platforms = any
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    pydantic>=1.10.2,<2.0.0
    requests>=2.28.1,<3.0.0

[options.extras_require]
dev = 
    black==22.10.0
    pylint==2.15.8
test = 
    responses>=0.22.0,<1.0.0
